--- a/src/styles.css
+++ b/src/styles.css
@@ -35,11 +35,11 @@ body {
  #sndOn
  {
 	height: 18px;
-	top: 16px;
+	top: 18px;
  }
  
  #sndOff {
-	top: 17px;
+	top: 19px;
 	display: none;
 	height: 16px;
  }
@@ -47,6 +47,7 @@ body {
 #sndBtnA
 {
 	width: 30px;
+	height: 40px;
 }
 
 #bodypaint{
@@ -454,16 +455,29 @@ body {
   font-size: 140%;
 }
 
-#achievementsBtn{
-  
-  //margin-top: 15px;
-  //width: 300%;
-  //border-style: solid;
-}
-
 #achievementsBtnImg
 {
 	background-image: url("assets/osiagniecia_menu.svg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	width: 110px;
+	height: 30px;
+	margin-top: -1px;
+}
+
+#statisticsBtnImg
+{
+	background-image: url("assets/statystyki_menu.svg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	width: 110px;
+	height: 30px;
+	margin-top: -1px;
+}
+
+#logoutBtnImg
+{
+	background-image: url("assets/wyloguj_menu.svg");
 	background-size: contain;
 	background-repeat: no-repeat;
 	width: 100px;
