--- a/src/app/achievements/achievements.component.css
+++ b/src/app/achievements/achievements.component.css
@@ -35,8 +35,9 @@
 	position: absolute;
 	left: 45%;
 	width: 55%;
-	margin-bottom: 20px;
-	margin-top: 10px;
+	margin-bottom: 40px;
+	margin-top: 30px;
+	padding-right: 18px
 }
 
 #achievementsGroup
@@ -44,17 +45,18 @@
 	position: absolute;
 	left: 0px;
 	width: 40%;
-	margin-bottom: 20px;
-	margin-top: 10px;
+	margin-bottom: 40px;
+	margin-top: 30px;
+	padding-left: 4px;
 }
 
 .achGroupLabel
 {
-	margin-left: 50px;
+	margin-left: 52px;
 	font-family: lovemonster;
-	font-size: 50px;
+	font-size: 45px;
 	color: #9a6d38;
-	margin-bottom: -1px;
+	margin-bottom: 6px;
 }
 
 #topFrame {
