--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,7 @@ body {
  {
 	margin-top: 40px;
 	margin-bottom: 30px;
+	margin-left: 240px;
  }
  
  .carouselImg
@@ -325,11 +326,14 @@ body {
   padding: 20px;
   height: 570px;
   width: 500px;
+  margin-bottom: 40px;
+  margin-top: -40px;
 }
 
 #uppContainer {
   padding: 20px;
   width: 670px;
+  margin-top: -40px;
 }
 
 #loginContainer {
