--- a/src/styles.css
+++ b/src/styles.css
@@ -26,11 +26,16 @@ body {
 	//width: 20px;
  }
 
+.row
+{
+	margin-left: -150px;
+}
+ 
  .aContainer
  {
 	margin-top: 40px;
 	margin-bottom: 30px;
-	margin-left: 240px;
+	margin-left: 0px;
  }
  
  .carouselImg
@@ -40,14 +45,14 @@ body {
  
  .headerSeparator
  {
-	width: 200px;
+	width: 70px;
 	height: 1px;
  }
  
  .rightSeparator
  {
 	height: 1px;
-	width: 30px;
+	width: 130px;
  }
  
  @font-face {
@@ -98,7 +103,7 @@ body {
 #statisticsContainer {
   position: absolute;
   left: 50%;
-  top: 150px;
+  top: 280px;
   margin-left: -300px;
   z-index: 1005;
   display: none;
@@ -107,7 +112,7 @@ body {
 #achievementsContainer {
   position: absolute;
   left: 50%;
-  top: 150px;
+  top: 280px;
   margin-left: -300px;
   z-index: 1005;
   display: none;
@@ -117,7 +122,7 @@ body {
   color: #9a6d38;
   position: absolute;
   left: 50%;
-  top: 120px;
+  top: 350px;
   transform: translateX(-50%);
   min-width: 400px;
   height: 140px;
