--- a/src/styles.css
+++ b/src/styles.css
@@ -88,8 +88,8 @@ body {
 
  #musicOn
  {
-	height: 18px;
-	top: 18px;
+	height: 16px;
+	top: 19px;
 	display: none;
  }
  
@@ -102,6 +102,8 @@ body {
 {
 	width: 30px;
 	height: 40px;
+	margin-right: 15px;
+	margin-left: 15px;
 }
 
 #bodypaint{
@@ -514,6 +516,7 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bold;
+  //margin-left: -76px;
 }
 
 #achievementsBtnImg
